			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

21-Jul-2005
~~~~~~~~~~~
Replaced the text the Options box telling people to download and run
MIME-Editor with a button that actually does it (Thomas Leonard).

17-Jul-2005
~~~~~~~~~~~
Bugfix: Opening a new filer window with a key press warped the pointer
	to the top-left of the screen (Matthew Weier O'Phinney and Thomas
	Leonard).

16-Jul-2005
~~~~~~~~~~~
Detect GCC 4 and disable pointer signedness warnings (Thomas Leonard).
Mark files as executable if their MIME type is a subclass of
application/x-executable (Thomas Leonard).
Removed the option for choosing panel side for -S, since we can use the new
method of choosing the panel side indead (Thomas Leonard).
Split Mount SOAP operation into separate Mount and Unmount operations
(Thomas Leonard).
Bugfix: The path entry buffer didn't work in /, due to recent changes
	(Thomas Leonard).
Bugfix: Clicking on a directory which was mounted but shown as unmounted,
	due to the display being out-of-date, tried to unmount it.
	(Thomas Leonard, reported by Mephistopheles Jones as bug #1007402).

15-Jul-2005
~~~~~~~~~~~
Copied xdgmime library into the filer, so we don't need gnomevfs just
to do MIME guessing from file contents (Guido Schimmels).

26-Jun-2005
~~~~~~~~~~~
Renamed the 'ROX Session' section in options to 'Desktop' as it could be
used by any session manager (Stephen Watson).

25-Jun-2005
~~~~~~~~~~~
Panel side is now stored with the panel file, and is reused on start-up if
you use --border in place of the old --top, --bottom, --left and --right
(which still work). The panel menu has a new 'Panel Options...' choice to let
you change which edge to use (Thomas Leonard).

11-Jun-2005
~~~~~~~~~~~
Updated Chinese translation (Babyfai Cheung).

09-Jun-2005
~~~~~~~~~~~
Removed AC_PATH_X, which stopped configure working on Mac OS X (Thomas Leonard;
reported by Tristan McLeay). We already had AC_PATH_XTRA anyway.

07-Jun-2005
~~~~~~~~~~~