@@ -3,4 +3,7 @@
   <mime-type type="image/png">
     <glob pattern=".DirIcon"/>
   </mime-type>
+  <mime-type type="application/x-shellscript">
+    <sub-class-of type="application/x-executable"/>
+  </mime-type>
 </mime-info>
